# blue-vault

./: .cursorrules  .gitignore  ARCHITECTURE.md  CHANGELOG.md  COMMIT_PLAN.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  DIRECTORY_SELECTION_OPTIONS.md  Dockerfile  LICENSE  PUSH_INSTRUCTIONS.md  Project.md  README.md  RUNNING.md  build.sh  flake.nix
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  release.yml
src/: burn.rs  commands.rs  config.rs  database.rs  dependencies.rs  disc.rs  iso.rs  lib.rs  logging.rs  main.rs  manifest.rs  paths.rs  qrcode.rs  search.rs  staging.rs  theme.rs  verify.rs
src/tui/: directory_selector_simple.rs  list_discs.rs  logs_view.rs  main_menu.rs  mod.rs  new_disc.rs  resume_burn.rs  search_ui.rs  settings.rs  splash.rs  verify_multi_disc.rs  verify_ui.rs
src/ui/: animations.rs  disc_activity.rs  header_footer.rs  layout.rs  mod.rs
