[package]
name = "bdarchive"
version = "0.1.2"
edition = "2021"
description = "BlueVault - A TUI application for managing Blu-ray cold storage archives on Linux"
license = "GPL-2.0-only"
authors = ["Your Name <you@example.com>"]

[dependencies]
# TUI
ratatui = "0.27"
crossterm = "0.28"
fpicker = "0.1"  # File/directory picker widget for ratatui

# Async runtime (for background tasks)
tokio = { version = "1", features = ["full"] }

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# Configuration
toml = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Path handling
dirs = "5"

# UUID generation
uuid = { version = "1", features = ["v4"] }

# Crypto (SHA256)
sha2 = "0.10"
hex = "0.4"
crc32fast = "1.4"  # Fast CRC32 for initial manifest
rayon = "1.8"      # Parallel processing

# Command execution
which = "6"

# Error handling
anyhow = "1"
thiserror = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "time"] }

# File system operations
walkdir = "2"

# QR code (optional, but we'll try to use qrencode CLI first)
# If needed, we can add a Rust QR library as fallback

[dev-dependencies]
tempfile = "3"

